tests/baselines/reference/errorsForCallAndAssignmentAreSimilar.errors.txt
errorsForCallAndAssignmentAreSimilar.ts(11,11): error TS2322: Type '"hdpvd"' is not assignable to type '"bluray"'.
errorsForCallAndAssignmentAreSimilar.ts(16,11): error TS2322: Type '"hdpvd"' is not assignable to type '"bluray"'.


==== errorsForCallAndAssignmentAreSimilar.ts (2 errors) ====
    function minimalExample1() {
        type Disc =
            | { kind: "hddvd" }
            | { kind: "bluray" }
    
        function foo(x: Disc[]) {
        }
    
        foo([
            { kind: "bluray", },
            { kind: "hdpvd", }
              ~~~~
!!! error TS2322: Type '"hdpvd"' is not assignable to type '"bluray"'.
!!! related TS6500 errorsForCallAndAssignmentAreSimilar.ts:3:13: The expected type comes from property 'kind' which is declared here on type 'Disc'
        ]);
    
        const ds: Disc[] = [
            { kind: "bluray", },
            { kind: "hdpvd", }
              ~~~~
!!! error TS2322: Type '"hdpvd"' is not assignable to type '"bluray"'.
!!! related TS6500 errorsForCallAndAssignmentAreSimilar.ts:3:13: The expected type comes from property 'kind' which is declared here on type 'Disc'
        ];
    }